--- a/Android/4Inaline/app/src/main/res/layout/activity_login.xml
+++ b/Android/4Inaline/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,8 @@
                 android:maxLength="1"
                 android:ems="10"
                 android:id="@+id/etLevel"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:text="1" />
 
             <com.google.android.gms.common.SignInButton
                 android:layout_width="wrap_content"
